--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/src/style.css" rel="stylesheet">
-  <title>Sneak Peak | Mens & Womens |</title>
+  <title>Sootika</title>
 </head>
 
 <body>
