--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/frontend/public/products/htmllogo.png" />
+  <link rel="icon" type="image/svg+xml" href="/frontend//public/products/htmllogo" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="/src/style.css" rel="stylesheet">
   <title>Sootika</title>
